# example_naive_blockchain

./: Cargo.toml  build.rs  test_chain.sh
proto/: node_service.proto
src/: blockchain.rs  server.rs
