[package]
name = "example_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node-server"
path = "src/server.rs"

# TODO: Implement a Client
# [[bin]]
# name = "node-client"
# path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sha256 = "1.0.3"
parking_lot = "0.12.0"
structopt = "0.3.26"

[build-dependencies]
tonic-build = "0.7"